# advent_of_code_2018

./: .travis.yml  Cargo.toml  README.md  aliases.js  enable_day.sh  search-index.js
day01/: Cargo.toml  all.html  (+6 more)
day06/: Cargo.toml  all.html  fn.manhattan_distance.html  fn.parse_input.html  index.html  manhattan_distance.v.html  sidebar-items.js  static.PUZZLE_INPUT.html  struct.Position.html  trait.AoC.html
day06/benches/: aoc_benchmark.rs
day06/benchmark/: BenchmarkVector.t.html  fn.to_benchmark.html  index.html  type.BenchmarkVector.html
day06/day06_part1/Parse_string_dynamically/base/: estimates.json  raw.csv
day06/day06_part1/Parse_string_dynamically/report/: index.html
day06/initial/: CoordinateId.t.html  Day06Initial.t.html  boundaries.v.html  enum.Cell.html  fn.boundaries.html  fn.new_grid.html  fn.solution_part1.html  fn.solution_part2.html  index.html  new_grid.v.html  sidebar-items.js  solution_part1.v.html  solution_part2.v.html  struct.BoundingBox.html  struct.Day06Initial.html  type.CoordinateId.html  type.Grid.html
day06/report/: index.html
day06/src/: initial.rs  lib.rs
day12/: AoC.t.html  Cargo.toml  PUZZLE_INPUT.v.html  PotState.t.html  all.html  enum.PotState.html  index.html  sidebar-items.js  static.PUZZLE_INPUT.html  struct.InitialState.html  struct.Input.html  struct.Note.html  trait.AoC.html
day12/benches/: aoc_benchmark.rs
day12/benchmark/: fn.to_benchmark.html  index.html  type.BenchmarkVector.html
day12/initial/: Day12Initial.t.html  index.html  sidebar-items.js  struct.Day12Initial.html
day12/src/: initial.rs  lib.rs
(+455 files in other folders)
